--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:name=".root.SampleNetworkApp"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/simple"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
